# scrftch

./: Cargo.toml  LICENSE  README.md
res/logos/: unix  unknown
src/: logos.rs  main.rs  unix.rs  windows.rs
src/logos/: debian.txt  linux.txt  ubuntu.txt  windows
