[package]
name = "scrftch"
version = "0.1.1"
authors = ["Alexey Trifonov <avrong@outlook.com>"]
description = "Screenfetch in Rust"
repository = "https://github.com/avrong/scrftch"
license = "MIT"
readme = "README.md"

[dependencies]
prettytable-rs = "0.6.7"
rust-ini = "0.11.0"
sys-info = "0.5.6"
rust-embed = "1.1.1"
log = "0.4.1"
